# exhibition-tracker

./: .gitignore  LOG.md  README.md  TODO.md  cleaned_soup.html  exhibitions.json  exhibitions.py  exhibitions_pipeline.py  main.py  museums_csv_cleaner.py  ngi_exhibitions_groundtruth.json  pyproject.toml  script.py
backend/: api.py  scheduler.py
backend/browswer_use_example/: exhibitions.py  notes.md
backend/data/: exhibitions.db  exhibitions.json  full_museums.csv  museums.csv  museums_cleaned.csv  museums_csv_cleaner.py
backend/playground/: simple_url_scraping_debug.py
backend/scraper/: condenser.py  extractor.py  models.py  orchestrator.py  utils.py
browswer_use_example/: console_outputs.md  exhibitions_fast.json  exhibitions_v2.json
docs/: SCHEMA.md
playground/: simple_fast_scraping_script.py
